updated semantic analysis

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,58 +11,52 @@ include_directories(${LLVM_INCLUDE_DIRS} .)
 add_definitions(${LLVM_DEFINITIONS})
 
 llvm_map_components_to_libnames(LLVM_LIBS
-        support
-        core
-        irreader
-        ExecutionEngine
-        nativecodegen
-        X86AsmParser
-        mcjit
-        Passes
-        InstCombine
-        ScalarOpts
-        )
+	support
+	core
+	irreader
+	ExecutionEngine
+	nativecodegen
+	X86AsmParser
+	mcjit
+	Passes
+	InstCombine
+	ScalarOpts
+)
 
 ### locate source files
 file(GLOB_RECURSE ALGEBRA_FILES "algebra/*.cpp" "algebra/*.hpp" "algebra/*.tcc")
 file(GLOB_RECURSE CODEGEN_FILES "codegen/*.cpp" "codegen/*.hpp" "codegen/*.tcc")
 file(GLOB_RECURSE FOUNDATIONS_FILES "foundations/*.cpp" "foundations/*.hpp" "foundations/*.tcc")
 file(GLOB_RECURSE SQL_FILES "sql/*.cpp" "sql/*.hpp" "sql/*.tcc")
-file(GLOB_RECURSE QUERIES_FILES "queries/*.cpp" "queries/*.hpp")
-#file(GLOB_RECURSE TESTS_FILES "tests/*.cpp" "tests/*.hpp")
+file(GLOB_RECURSE QUERIES_FILES "queries/*.cpp" "queries/*.hpp" "queries/*.tcc")
+file(GLOB_RECURSE QUERY_COMPILER_FILES "query_compiler/*.cpp" "query_compiler/*.hpp" "query_compiler/*.tcc")
+#file(GLOB_RECURSE TESTS_FILES "tests/*.cpp" "tests/*.hpp" "tests/*.tcc")
 
 set(SOURCE_FILES
-        main.cpp
-
-        query_compiler/queryparser.cpp
-        query_compiler/queryparser.hpp
-#        query_compiler/semantic_analysis.cpp # TODO update
-#        query_compiler/semantic_analysis.hpp # TODO update
-        query_compiler/compiler.cpp
-        query_compiler/compiler.hpp
-
-        ${ALGEBRA_FILES}
-        ${CODEGEN_FILES}
-        ${FOUNDATIONS_FILES}
-        ${SQL_FILES}
-        ${QUERIES_FILES}
-        )
+	main.cpp
+	${ALGEBRA_FILES}
+	${CODEGEN_FILES}
+	${FOUNDATIONS_FILES}
+	${SQL_FILES}
+	${QUERIES_FILES}
+	${QUERY_COMPILER_FILES}
+)
 
 set(THIRD_PARTY third_party/hexdump.cpp third_party/hexdump.hpp)
 
 set(TESTS
-#        tests/join_test.cpp # TODO update
-        tests/if_test.cpp
-        tests/loop_test.cpp
-        tests/interop_test.cpp
-        tests/codegen_test.cpp
-        tests/types_test.cpp
-#        tests/query_test.cpp
-        tests/expression_test.cpp
-        tests/groupby_test.cpp
-        tests/tests.cpp
-        tests/tests.hpp
-        )
+#    tests/join_test.cpp # TODO update
+	tests/if_test.cpp
+	tests/loop_test.cpp
+	tests/interop_test.cpp
+	tests/codegen_test.cpp
+	tests/types_test.cpp
+#    tests/query_test.cpp
+	tests/expression_test.cpp
+	tests/groupby_test.cpp
+	tests/tests.cpp
+	tests/tests.hpp
+)
 
 ### default schema file
 get_filename_component(SCHEMA_FILE schemas/schema.sql ABSOLUTE)
@@ -71,16 +65,16 @@ get_filename_component(SCHEMA_FILE schemas/schema.sql ABSOLUTE)
 set(LOADER_FILE loader_generated.cpp)
 
 add_custom_command(
-  OUTPUT ${LOADER_FILE}
-  COMMAND schema_parser ${SCHEMA_FILE} > ${LOADER_FILE}
-  DEPENDS ${SCHEMA_FILE} schema_parser
-  COMMENT "Generating database loader"
-  VERBATIM
+	OUTPUT ${LOADER_FILE}
+	COMMAND schema_parser ${SCHEMA_FILE} > ${LOADER_FILE}
+	DEPENDS ${SCHEMA_FILE} schema_parser
+	COMMENT "Generating database loader"
+	VERBATIM
 )
 
 add_custom_target(
-  GenerateLoader ALL
-  DEPENDS ${LOADER_FILE}
+	GenerateLoader ALL
+	DEPENDS ${LOADER_FILE}
 )
 
 ### all generated files
