Build semanticAnalyser as a library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,14 +42,13 @@ llvm_map_components_to_libnames(LLVM_LIBS
 
 ### libraries
 include(tools/sqlParser/local.cmake)
-#include(tools/semanticalAnalyser/local.cmake)
+include(tools/semanticalAnalyser/local.cmake)
 
 ### locate source files
 file(GLOB_RECURSE ALGEBRA_FILES "algebra/*.cpp" "algebra/*.hpp" "algebra/*.tcc")
 file(GLOB_RECURSE CODEGEN_FILES "codegen/*.cpp" "codegen/*.hpp" "codegen/*.tcc")
 file(GLOB_RECURSE FOUNDATIONS_FILES "foundations/*.cpp" "foundations/*.hpp" "foundations/*.tcc")
 file(GLOB_RECURSE NATIVE_FILES "native/*.cpp" "native/*.hpp" "native/*.tcc")
-file(GLOB_RECURSE SEMANTIC_ANALYSIS_FILES "semanticAnalysis/*.cpp" "semanticAnalysis/*.hpp")
 file(GLOB_RECURSE SQL_FILES "sql/*.cpp" "sql/*.hpp" "sql/*.tcc")
 file(GLOB_RECURSE QUERIES_FILES "queries/*.cpp" "queries/*.hpp" "queries/*.tcc")
 file(GLOB_RECURSE QUERY_COMPILER_FILES "query_compiler/*.cpp" "query_compiler/*.hpp" "query_compiler/*.tcc")
@@ -110,7 +109,7 @@ set(GENERATED_SOURCE_FILES ${LOADER_FILE})
 
 ### main library
 add_library(dblib ${DB_LIB_SOURCE_FILES})
-target_link_libraries(dblib sqlparser LLVM)
+target_link_libraries(dblib semanticalAnalyser sqlparser LLVM)
 
 ### main application
 add_executable(protodb ${GENERATED_SOURCE_FILES} ${TEST_SOURCE_FILES})
