Remove interop_test from CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,7 +83,7 @@ set(TEST_SOURCE_FILES
 #    tests/join_test.cpp # TODO update
 #	tests/if_test.cpp
 #	tests/loop_test.cpp
-	tests/interop_test.cpp
+#	tests/interop_test.cpp
 #	tests/codegen_test.cpp
 	tests/types_test.cpp
 #    tests/query_test.cpp
