Aggregate revisions and contents and call callback after each page

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,7 @@ target_link_libraries(sql dblib queryCompiler queryExecutor)
 add_executable(semanticalBench benchmark/semanticalBench.cpp)
 target_link_libraries(semanticalBench dblib queryCompiler queryExecutor)
 if(LIBXML_AVAILABLE)
+	target_compile_definitions(semanticalBench PUBLIC -D LIBXML_AVAILABLE=true)
 	target_link_libraries(semanticalBench wikiparser)
 endif(LIBXML_AVAILABLE)
 
