--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,14 +25,13 @@ message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
 ### tools
 include("${CMAKE_SOURCE_DIR}/vendor/googletest.cmake")
 include("${CMAKE_SOURCE_DIR}/vendor/gflags.cmake")
-if(LINUX)
+if(CMAKE_SYSTEM_NAME MATCHES "Linux")
 	include("${CMAKE_SOURCE_DIR}/vendor/perfevent.cmake")
-endif(LINUX)
+endif(CMAKE_SYSTEM_NAME MATCHES "Linux")
 
 include_directories(.
 		${LLVM_INCLUDE_DIRS}
 		${GFLAGS_INCLUDE_DIR}
-		${PERFEVENT_INCLUDE_DIR}
 		${CMAKE_SOURCE_DIR}/include/tardisdb
 		)
 add_definitions(${LLVM_DEFINITIONS})
