--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(LIBXML_AVAILABLE false)
 set(ENABLE_PERFBENCHMARKING false)
 set(USE_DATA_VERSIONING true)
+set(TUPLE_STREAM_REQUIRED true)
 
 ### set up boost
 if(APPLE)
@@ -74,6 +75,9 @@ if(LIBXML_AVAILABLE)
 	target_compile_definitions(semanticalBench PUBLIC -D LIBXML_AVAILABLE=true)
 	target_link_libraries(semanticalBench wikiparser)
 endif(LIBXML_AVAILABLE)
+if(USE_DATA_VERSIONING)
+	target_compile_definitions(semanticalBench PUBLIC -D USE_DATA_VERSIONING=true)
+endif(USE_DATA_VERSIONING)
 if(ENABLE_PERFBENCHMARKING)
 	target_compile_definitions(semanticalBench PUBLIC -D PERF_AVAILABLE=true)
 endif(ENABLE_PERFBENCHMARKING)
