--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,8 +29,22 @@ else(NOT APPLE)
 endif(APPLE)
 message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
 message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
+llvm_map_components_to_libnames(LLVM_LIBS
+		support
+		core
+		irreader
+		ExecutionEngine
+		nativecodegen
+		X86AsmParser
+		mcjit
+		Passes
+		InstCombine
+		ScalarOpts
+		)
 
-### tools
+##################
+### vendor #######
+##################
 include("${CMAKE_SOURCE_DIR}/vendor/googletest.cmake")
 include("${CMAKE_SOURCE_DIR}/vendor/gflags.cmake")
 if(ENABLE_PERFBENCHMARKING)
@@ -40,6 +54,9 @@ if(USE_HYRISE)
 	include("${CMAKE_SOURCE_DIR}/vendor/hyrise.cmake")
 endif(USE_HYRISE)
 
+##################
+### config #######
+##################
 include_directories(.
 		${LLVM_INCLUDE_DIRS}
 		${GFLAGS_INCLUDE_DIR}
@@ -48,20 +65,9 @@ include_directories(.
 		)
 add_definitions(${LLVM_DEFINITIONS})
 
-llvm_map_components_to_libnames(LLVM_LIBS
-	support
-	core
-	irreader
-	ExecutionEngine
-	nativecodegen
-	X86AsmParser
-	mcjit
-	Passes
-	InstCombine
-	ScalarOpts
-)
-
-### libraries
+##################
+### libraries ####
+##################
 if(NOT USE_HYRISE)
 	include(tools/sqlParser/local.cmake)
 endif(NOT USE_HYRISE)
@@ -72,14 +78,20 @@ if(LIBXML_AVAILABLE)
 	include(tools/wikiParser/local.cmake)
 endif(LIBXML_AVAILABLE)
 
-### tests
+##################
+### tests ########
+##################
 include("${CMAKE_SOURCE_DIR}/test/local.cmake")
 
-### executables
+##################
+### tools ########
+##################
 add_executable(sql sql.cpp)
 target_link_libraries(sql dblib queryCompiler queryExecutor)
 
-### benchmarks
+##################
+### benchmark ####
+##################
 add_executable(semanticalBench benchmark/semanticalBench.cpp)
 target_link_libraries(semanticalBench dblib queryCompiler queryExecutor gflags pthread)
 if(LIBXML_AVAILABLE)
@@ -93,7 +105,9 @@ if(ENABLE_PERFBENCHMARKING)
 	target_compile_definitions(semanticalBench PUBLIC -D PERF_AVAILABLE=true)
 endif(ENABLE_PERFBENCHMARKING)
 
-### locate source files
+##################
+### DBLIB ########
+##################
 file(GLOB_RECURSE ALGEBRA_FILES "algebra/*.cpp" "algebra/*.hpp" "algebra/*.tcc")
 file(GLOB_RECURSE CODEGEN_FILES "codegen/*.cpp" "codegen/*.hpp" "codegen/*.tcc")
 file(GLOB_RECURSE FOUNDATIONS_FILES "foundations/*.cpp" "foundations/*.hpp" "foundations/*.tcc")
@@ -118,14 +132,7 @@ set(DB_LIB_SOURCE_FILES
 )
 
 set(TEST_SOURCE_FILES
-#    tests/join_test.cpp # TODO update
-#	tests/if_test.cpp
-#	tests/loop_test.cpp
-#	tests/interop_test.cpp
-#	tests/codegen_test.cpp
 	tests/types_test.cpp
-#    tests/query_test.cpp
-#	tests/expression_test.cpp
 	tests/groupby_test.cpp
 	tests/tests.cpp
 	tests/tests.hpp
@@ -189,19 +196,17 @@ set(RD_BENCH_SOURCE_FILES
 add_executable(rd_bench ${RD_BENCH_SOURCE_FILES})
 target_link_libraries(rd_bench dblib)
 
-### install
+##################
+### install ######
+##################
 MACRO(INSTALL_HEADERS_WITH_DIRECTORY HEADER_LIST)
     FOREACH(HEADER ${${HEADER_LIST}})
-#		message(STATUS ${HEADER})
 		get_filename_component(DIR ${HEADER} DIRECTORY)
-#		message(STATUS ${DIR})
         install(FILES ${HEADER} DESTINATION include/${DIR})
     ENDFOREACH(HEADER)
 ENDMACRO(INSTALL_HEADERS_WITH_DIRECTORY)
-
 file(GLOB_RECURSE HS RELATIVE ${CMAKE_SOURCE_DIR} "*.hpp" "*.tcc")
-#message(STATUS ${HS})
-INSTALL_HEADERS_WITH_DIRECTORY(HS)
 
+INSTALL_HEADERS_WITH_DIRECTORY(HS)
 install(TARGETS dblib DESTINATION lib)
 install(TARGETS sql protodb rd_bench DESTINATION bin)
