do not include sqlparser

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -183,7 +183,7 @@ endif(TUPLE_STREAM_REQUIRED)
 if(USE_DATA_VERSIONING)
 	target_compile_definitions(dblib PUBLIC -D USE_DATA_VERSIONING=true)
 endif(USE_DATA_VERSIONING)
-target_link_libraries(dblib semanticalAnalyser sqlparser LLVM dl)
+target_link_libraries(dblib semanticalAnalyser LLVM dl)
 if(USE_HYRISE)
 	target_compile_definitions(dblib PUBLIC -D USE_HYRISE=true)
 	target_link_libraries(dblib hyriselib)
